k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tw-stocker
  labels:
    app.kubernetes.io/part-of: tw-stocker
